--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-version 1.4.2 (2015-...):
+version 1.4.2 (2015-10-01):
   * Remove gettext support
   * Add support for python 3
   * Switch to using a proper Makefile for building/installation
