--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.4.3 (...):
+  * Add support for .tbr packages
+
 version 1.4.2 (2015-10-01):
   * Remove gettext support
   * Add support for python 3
