--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.4.5 ()
+  * Update brotli command for newer brotli release
+
 version 1.4.4 (2016-09-28):
   * Improve self-exclusion from dependency list
   * Make it possible to run depfinder on a package that is located in a
